resized collapsed sidebar correctly

--- a/app/styles/app-blue.css
+++ b/app/styles/app-blue.css
@@ -1325,7 +1325,8 @@ md-card img {
 
 @media screen and (max-width: 839px) {
   .sidebar {
-    width: 210px !important; }
+    /* width: 210px !important;  */
+  }
   .mdl-layout__header-row {
     padding-left: 2px !important; }
   .profile-content {
